# rust-http-server

./: Cargo.toml  Dockerfile  README.md
src/: handlers.rs  main.rs  types.rs
