[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
ed25519-dalek = "2"
rand = "0.8"
base64 = "0.21"
bs58 = "0.4"
solana-sdk = "1.18.3"


